[B] Share modal has correct position on mobile when not open

--- a/components/explorer/Controls/Share/_styles.scss
+++ b/components/explorer/Controls/Share/_styles.scss
@@ -26,14 +26,14 @@
   &.is-open {
     .open-share-button {
       @include base.respond(functions.break(desktop-height), min, height) {
-        z-index: 6;
+        z-index: functions.z-stack(controls);
       }
     }
   }
 
   .modal {
     left: -100vw;
-    z-index: functions.z-stack(controls);
+    z-index: functions.z-stack(modal);
     background-color: transparent;
     transition: left 0.4s ease-in-out;
 
@@ -53,12 +53,13 @@
       left: 0;
       width: auto;
       height: auto;
+      max-width: 100vw;
       padding: 6px 18px 12px;
       background-color: functions.palette(black);
       border-radius: 2px;
 
       @include base.respond(functions.break(mobile), min) {
-        max-width: 375px;
+        max-width: functions.break(mobile);
       }
 
       @include base.respond(functions.break(desktop-height), min, height) {
@@ -79,6 +80,11 @@
 
   .share-buttons-horizontal {
     margin-top: 15px;
+    flex-flow: row wrap;
+
+    @include base.respond(functions.break(mobile), min) {
+      flex-flow: row nowrap;
+    }
 
     @include base.respond(functions.break(desktop-height), min, height) {
       flex-flow: column nowrap;
